# Git-Calculator-Assignment

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  config.py  configuration.h  feature.cmake  main.c  run.sh
DivFeature/: CMakeLists.txt
Drivers/DivFeature/: .gitattributes  CMakeLists.txt  README.md
Drivers/DivFeature/inc/: div.h
Drivers/DivFeature/src/: div.c
Drivers/ModFeature/: CMakeLists.txt  README.md
Drivers/ModFeature/src/: Mod.c
Drivers/MulFeature/: .gitattributes  CMakeLists.txt  README.md
Drivers/MulFeature/inc/: Mul.h
Drivers/MulFeature/src/: Mul.c
Drivers/SubFeature/: CMakeLists.txt  README.md
Drivers/SubFeature/inc/: Sub_Feature.h
Drivers/SubFeature/src/: SUB_FEATUE.c
Drivers/SumFeature/: CMakeLists.txt  README.md
Drivers/SumFeature/src/: sum.c
ModFeature/: CMakeLists.txt
ModFeature/inc/: Mod.h
MulFeature/: CMakeLists.txt
MulFeature/inc/: Mul.h
SubFeature/: CMakeLists.txt
SumFeature/: CMakeLists.txt
SumFeature/inc/: sum.h
SumFeature/src/: sum.c
